--- a/5.html
+++ b/5.html
@@ -17,7 +17,7 @@
             </ul>
         </nav>
     </header>
-
+    
     <section id="services">
         <h2>Мои Услуги</h2>
         <div class="service">
@@ -50,33 +50,4 @@
         <p>&copy; 2023 Психолог. Все права защищены.</p>
     </footer>
 </body>
-</html>body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    margin: 0;
-    padding: 0;
-}
-header {
-    background: #33aaff;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-}
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-}
-section {
-    padding: 20px;
-    margin-top: 20px;
-}
-footer {
-    text-align: center;
-    padding: 10px 0;
-    background: #33aaff;
-    color: #fff;
-}
+</html>
